# aiida-epw-workflows

./: .gitignore  .readthedocs.yml  LICENSE  README.md  SUBMISSION_CONTROLLER_GUIDE.md  conftest.py  pyproject.toml
.github/workflows/: cd.yaml
aiida_epw_workflows/: __init__.py
aiida_epw_workflows/calculations/: __init__.py  epw.py
aiida_epw_workflows/calculations/helpers/: INPUT_EPW-6.0.nml
aiida_epw_workflows/common/: types.py
aiida_epw_workflows/data/: chk.py  constants.py  dicttree.py
aiida_epw_workflows/parsers/: __init__.py  epw.py
aiida_epw_workflows/tools/: __init__.py  calculators.py  check.py  chk2ukk.py  dos.py  kpoints.py  links.py  ph.py  plot.py  structure.py  workchains.py
aiida_epw_workflows/tools/analysers/: b2w.py  base.py  intp.py  supercon.py  transport.py
aiida_epw_workflows/workflows/: __init__.py  a2f.py  aniso.py  b2w.py  bands.py  base.py  bte.py  ibte.py  intp.py  iso.py  supercon.py  transport.py
aiida_epw_workflows/workflows/controllers/: __init__.py  base.py  config.py  epw.py  supercon.py
aiida_epw_workflows/workflows/protocols/: a2f.yaml  aniso.yaml  b2w.yaml  bands.yaml  base.yaml  bte.yaml  ibte.yaml  supercon.yaml  supercon_conv.yaml  (+1 more)
aiida_qe_super/: __init__.py
aiida_qe_super/tools/: calculators.py  parsers.py  plot.py  utils.py
aiida_qe_super/workflows/: electronphonon.py  epw.py  epwelectronphonon.py  supercon.py
aiida_supercon/: __init__.py
aiida_supercon/calculations/: epw.py
aiida_supercon/common/: restart.py
aiida_supercon/data/: chk.py
aiida_supercon/parsers/: epw.py
aiida_supercon/tools/: aiida.chk  aiida.ukk  calculators.py  dos.py  links.py  parsers.py  ph.py  plot.py
aiida_supercon/workflows/: __init__.py  a2f.py  aniso.py  b2w.py  bands.py  base.py  bte.py  epw.py  intp.py  iso.py  supercon.py  supercon_conv.py  transport.py
docs/: conf.py  index.md  index.rst  installation.rst  tutorial.rst
docs/api_reference/: aiida_epw_workflows.calculations.epw.rst  aiida_epw_workflows.calculations.rst  aiida_epw_workflows.data.chk.rst  aiida_epw_workflows.data.constants.rst  aiida_epw_workflows.data.dicttree.rst  aiida_epw_workflows.data.rst  aiida_epw_workflows.parsers.epw.rst  aiida_epw_workflows.parsers.rst  aiida_epw_workflows.rst  aiida_epw_workflows.tools.calculators.rst  aiida_epw_workflows.tools.chk2ukk.rst  aiida_epw_workflows.tools.dos.rst  aiida_epw_workflows.tools.kpoints.rst  aiida_epw_workflows.tools.parsers.rst  aiida_epw_workflows.tools.ph.rst  aiida_epw_workflows.tools.plot.rst  aiida_epw_workflows.tools.rst  aiida_epw_workflows.tools.structure.rst  aiida_epw_workflows.tools.workchains.rst  aiida_epw_workflows.workflows.a2f.rst  aiida_epw_workflows.workflows.aniso.rst  aiida_epw_workflows.workflows.b2w.rst  aiida_epw_workflows.workflows.bands.rst  aiida_epw_workflows.workflows.base.rst  aiida_epw_workflows.workflows.bte.rst  aiida_epw_workflows.workflows.controllers.base.rst  aiida_epw_workflows.workflows.controllers.config.rst  aiida_epw_workflows.workflows.controllers.electronphonon.rst  aiida_epw_workflows.workflows.controllers.epw.rst  aiida_epw_workflows.workflows.controllers.rst  aiida_epw_workflows.workflows.controllers.supercon.rst  aiida_epw_workflows.workflows.controllers.supercon_complete.rst  aiida_epw_workflows.workflows.intp.rst  aiida_epw_workflows.workflows.iso.rst  aiida_epw_workflows.workflows.protocols.rst  aiida_epw_workflows.workflows.rst  aiida_epw_workflows.workflows.supercon.rst  aiida_epw_workflows.workflows.transport.rst  aiida_supercon.data.rst  aiida_supercon.parsers.rst  (+7 more)
docs/developer_guide/: a2f.rst  aniso.tst  b2w.rst  bands.rst  base.rst  bte.rst  ibte.rst  index.rst  intp.rst  iso.rst  overview.rst  qe.md  supercon.rst  transport.rst  workflows.rst
docs/tutorials/: index.rst  supercon.rst  transport.rst
docs/user_guide/: index.rst
examples/: 01_a2f.py  01_b2w.py  07_supercon.py  run_supercon_controller.py
examples/structures/: MgB2.xsf  MgB2.xyz  Pb.xyz  Si.xsf  SiC.cif
tests/: conftest.py
tests/calculations/: test_epw.py
tests/workflows/: test_base.py
utils/: Manifest.toml  Project.toml  README.md  chk2ukk.jl
(+101 files in other folders)
